# vive_robot_calibration

./: .gitignore  CMakeLists.txt  readme.md  vive_traj.csv  vive_traj2robot.csv  vive_traj2robot_interpolation.csv  vive_traj2robot_interpolation_filted.csv
config/: calibration.json
doc/: 0526_linear_error_test.txt  0527_linear_1.txt  RobotModule.cpp  attation.md  喷枪改进建议
doc/0606/01/: vive_traj.csv  vive_traj2robot.csv  vive_traj2robot_interpolation.csv  vive_traj2robot_interpolation_filted.csv
doc/0606/02/: vive_traj.csv  vive_traj2robot.csv  vive_traj2robot_interpolation.csv  vive_traj2robot_interpolation_filted.csv
doc/0710/mark/1/: print
doc/0710/mark/2/: print
doc/0718/: readme.md
doc/0731/: print.txt  vive_traj.csv  vive_traj2robot.csv  vive_traj2robot_interpolation.csv  vive_traj2robot_interpolation_filted.csv
doc/0801/: aaa
doc/0802/零点/: print.txt  vive_traj.csv  vive_traj2robot.csv  vive_traj2robot_interpolation.csv  vive_traj2robot_interpolation_filted.csv
doc/0802/非零点/: print.txt  vive_traj.csv  vive_traj2robot.csv  vive_traj2robot_interpolation.csv  vive_traj2robot_interpolation_filted.csv
doc/0804/: vive_traj.csv  vive_traj2robot.csv  vive_traj2robot_interpolation.csv  vive_traj2robot_interpolation_filted.csv
doc/mard_record/: 0523_SVD标定_moka_1.txt  0523_工具手标定_moka_1.txt  0523_工具手标定_moka_2.txt  0523_工具手标定_moka_3.txt  0523_追踪器重复定位精度.txt  0523_追踪器重复定位精度_moka_1.txt  1.txt  2.txt  250522_1.txt  250522_2.txt  250522_3.txt  250522_4.txt  250522_5.txt  250522_6.txt  250522_7.txt  point1.txt  point2.txt
doc/mard_record/0529_不带工具手标定Robot和Tracker工具手/: 0529_工具手标定_moka_1_1  0529_工具手标定_moka_1_2  0529_工具手标定_moka_1_3  0529_工具手标定_moka_2_1  0529_工具手标定_moka_2_2  0529_工具手标定_moka_2_3  0529_工具手标定_moka_2_4
doc/mard_record/0529_带Robot工具手标定Tracker工具手/: 1_1
doc/mard_record/0605_过滤_插补_二次过滤/: vive_traj.csv  vive_traj2robot.csv  vive_traj2robot_interpolation.csv  vive_traj2robot_interpolation_filted.csv
doc/traj/0529/01/: run_traj  vive_traj.csv  vive_traj2robot.csv
doc/traj/0529/02/: vive_traj.csv  vive_traj2robot.csv
doc/traj/0530/: vive_traj.csv  vive_traj2robot.csv
doc/traj/仅移动X轴/: vive_traj.csv  vive_traj2robot.csv
doc/traj/仅移动Y轴/: vive_traj.csv  vive_traj2robot.csv
doc/traj/仅移动Z轴/: vive_traj.csv  vive_traj2robot.csv
include/c_interface/: nrc_c_interface.h  nrc_c_io.h  nrc_c_queue_operate.h
include/cpp_interface/: nrc_api.h  nrc_craft_conveyor_belt_track.h  nrc_craft_laser_cutting.h  nrc_craft_vision.h  nrc_craft_weld.h  nrc_interface.h  nrc_io.h  nrc_job_operate.h  nrc_queue_operate.h  nrc_track.h
include/parameter/: nrc_craft_conveyor_belt_track_parameter.h  nrc_craft_laser_cutting_parameter.h  nrc_craft_vision_parameter.h  nrc_craft_weld_parameter.h  nrc_define.h  nrc_interface_parameter.h  nrc_parameter.h
lib/gram_savitzky_golay/: api.h  gram_savitzky_golay.cpp  gram_savitzky_golay.h  spatial_filters.cpp  spatial_filters.h
src/: main.cpp
src/algorithm/: CMakeLists.txt  calibration.cpp  calibration.h  filter.cpp  filter.h  interpolation.cpp  interpolation.h
src/communication/: CMakeLists.txt  comm_manager.cpp  comm_manager.h  message_handler.cpp  message_handler.h  msg_json_transfer.cpp  msg_json_transfer.h  nrc_comm.cpp  nrc_comm.h
src/configfile/: CMakeLists.txt  calibration_config.cpp  calibration_config.h  calibration_config_async.h  config_file.cpp  config_file.h  task_executor.h
src/htc_vive/: CMakeLists.txt  vive_tracker.cpp  vive_tracker.h  vive_tracker_reader.cpp  vive_tracker_reader.h  vive_wrapper.cpp  vive_wrapper.h
src/ui/: CMakeLists.txt  csv_parser.cpp  csv_parser.h  main_window.cpp  main_window.h  main_window.ui
src/utils/: CMakeLists.txt  common_header.h  json_utils.cpp  json_utils.h  realtime_tester.cpp  realtime_tester.h  utils.cpp  utils.h
